# ComfyUI-ultimate-openpose-editor

./: README.md  __init__.py  appendage_editor_nodes.py  openpose_editor_nodes.py  pyproject.toml  requirements.txt  util.py
examples/: appendage_editor_example.json  pose_reactive_video.json
js/: editor_textDisplay.js  openpose_editor.js
js/ui/: OpenposeEditor.html
js/ui/assets/: index-0f13da71.js  index-22cc811d.css  index-36ae52e4.css  index-cd1939ba.js
